css/simon.css
body {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #BF1E2E;
}

@font-face {
    font-family: PokemonText;
    src: url('../media/fonts/PokemonGB.ttf');
}
.pokeText {
  font-family: PokemonText;
  font-size: 0.8em;
  cursor: pointer;
}
#stuff {
  width: 730px;
  height: 730px;
  margin: 0 auto;
}

#gameBoard {
  width: 730px;
  height: 730px;
  background-color: black;
  border-radius: 365px;
  margin: 0 auto;
  margin-top: 100px;
  z-index: 1;
}

.colorButton {
  position: relative;
  height: 325px;
  width: 325px;
  margin: 30px;
  z-index: 2;
  float: left;
  overflow: hidden;
  user-select: none;
}

#greenButton {
  border-top-left-radius: 325px;
  background-color: green;
  margin-bottom: 10px;
  margin-right: 10px;
}

#redButton {
  border-top-right-radius: 325px;
  background-color: darkred;
  margin-bottom: 10px;
  margin-left: 10px;
}

#yellowButton {
  border-bottom-left-radius: 325px;
  background-color: goldenrod;
  margin-top: 10px;
  margin-right: 10px;
}

#blueButton {
  border-bottom-right-radius: 325px;
  background-color: darkblue;
  margin-top: 10px;
  margin-left: 10px;
}

.pokemonImage {
  width: 200px;
  height: 200px;
  overflow: hidden;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -o-user-select: none;
  user-select: none;
}
#imageBulbasaur {
  position: relative;
  left: 20px;
  top: 10px;
}
#imageCharmander {
  position: relative;
  left: 40px;
  top: 40px;
}
#imagePikachu {
  position: relative;
  left: 10px;
  top: 80px;
}
#imageSquirtle {
  position: relative;
  left: 75px;
  top: 85px;
}


#controlPanel {
  height: 400px;
  width: 400px;
  background-color: #000;
  border-radius: 400px;
  position: relative;
  top: 165px;
  left: 165px;
  z-index: 3;
}

#controlPanelOverlay {
  height: 360px;
  width: 360px;
  background-color: white;
  border-radius: 360px;
  border: 5px solid #222;
  position: relative;
  top: 15px;
  left: 15px;
  z-index: 4;
}

#panelLabelMask {
  position: absolute;
  height: 175px;
  width: 360px;
  overflow: hidden;
  border-bottom: 5px solid #222;
  z-index: 9;
}

#victorySection {
  position: absolute;
  color: white;
  top: 75px;
  left: 50px;
  z-index: 11;
}
#panelLabelSection {
  position: absolute;
  height: 360px;
  width: 360px;
  background-color: #BF1E2E;
  border-radius: 900px;
  z-index: 10;
}

#panelLabel {
  position: absolute;
  width: 350px;
  font-family: Orbitron, sans-serif;
  font-weight: 900;
  font-size: 3.4em;
  height: 350px;
  text-align: center;
  top: 130px;
  left: 5px;
  cursor: default;
}

#buttonRow {
  position: absolute;
  text-align: center;
  width: 360px;
  top: 180px;
  left: 5px;
}

.buttonWell {
  position: relative;
  display: inline-block;
  margin: 20px;
}

.optionButton {
  position: relative;
  height: 25px;
  width: 25px;
  border: 3px solid black;
  border-radius: 100%;
}


#startButton {
  background-color: darkred;
}
#startButton:active {
  left: 1px;
  background: radial-gradient(at 50%, pink 5%, red);
  border: 2px solid black;
}
#strictButton {
  background-color: gold;
}
#strictButton:active {
  left: 1px;
  border: 2px solid black;
}
#resetButton {
  background-color: teal;
}
#resetButton:active {
  left: 1px;
  background: radial-gradient(at 50%, skyblue 35%, teal);
  border: 2px solid black;
}

.optionButtonLabel {
  position: relative;
  top: 7px;
  left: -5px;
  font-size: 1em;
  font-weight: bold;
  color: black;
  cursor: default;
}

#counterSection {
  position: absolute;
  text-align: center;
  width: 350px;
  height: 40px;
  top: 290px;
}

#counterDisplay {
  position: relative;
}

#sevenSegDisplay {
  height: 50px;
  width: 100px;
  margin-left: 10px;
  position: relative;
  display: inline-block;
}

#pokeBallCorner {
  background: url('../media/images/pokeball_corner.jpg');
  background-repeat: no-repeat;
  background-size: contain;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 400px;
  height: 400px;
}

#pokeBall1 {
  background: url('../media/images/pokeball_background.jpg');
  background-repeat: no-repeat;
  background-size: contain;
  position: absolute;
  top: 30px;
  right: 120px;
  width: 200px;
  height: 200px;
}


/* About modal CSS */
#myAbout {
  position: fixed;
  bottom: 5px;
  left: 175px;
}

a, a:visited{
  text-decoration: none;
  color: blue;
}
a:hover {
  text-decoration: underline;
}


.modal {
    display: none;
    position: fixed;
    z-index: 15;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.9);
}

/* Close Button */
.close {
    color: #000;
    float: right;
    font-size: 28px;
    font-weight: bold;
}
.close:hover,
.close:focus {
    color: white;
    text-decoration: none;
    cursor: pointer;
}

/* Add Animation */
@-webkit-keyframes animatetop {
    from {top: -300px; opacity: 0}
    to {top: 0; opacity: 1}
}

@keyframes animatetop {
    from {top: -300px; opacity: 0}
    to {top: 0; opacity: 1}
}

.modal-content {
    position: relative;
    background-color: #fefefe;
    margin: auto;
    padding: 0;
    border: 1px solid #888;
    width: 50%;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.4s
}

.modal-header {
    padding: 2px 16px;
    height: 50px;
    background-color: #BF1E2E;
    color: white;
    text-align: center;
}

.modal-body {padding: 2px 16px;}

.modal-footer {
    background-color: #BF1E2E;
    height: 20px;
}

